[gd_scene load_steps=4 format=3 uid="uid://bljsqm26ryuqx"]

[ext_resource type="Texture2D" uid="uid://b4h0uisyfpgjx" path="res://assets/hud/title.png" id="1_vhmhu"]
[ext_resource type="Script" uid="uid://bsp0bivpti18t" path="res://scenes/hud/main_menu.gd" id="1_wprdj"]
[ext_resource type="Texture2D" uid="uid://c8ki1f8ryvf5u" path="res://icon.png" id="3_fkojh"]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_wprdj")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.447059, 0, 0.364706, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_direction = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 445.0
offset_bottom = -25.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 25
alignment = 1

[node name="NewGame" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "New Game"

[node name="LoadGame" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Load Game"

[node name="QuitGame" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Quit Game"

[node name="Title" type="Sprite2D" parent="."]
position = Vector2(583, 264)
scale = Vector2(0.394213, 0.394213)
texture = ExtResource("1_vhmhu")

[node name="PopupMenu" type="PopupMenu" parent="."]
initial_position = 1
size = Vector2i(300, 300)

[node name="ColorRect" type="ColorRect" parent="PopupMenu"]
offset_right = 314.0
offset_bottom = 316.0
color = Color(0.374139, 0.374139, 0.374139, 1)

[node name="Label" type="Label" parent="PopupMenu"]
offset_left = 4.0
offset_top = 15.0
offset_right = 301.0
offset_bottom = 322.0
text = "Game could not be loaded. 
Please hit new game and save first."
horizontal_alignment = 1
autowrap_mode = 2

[node name="popupbutton" type="Button" parent="PopupMenu"]
offset_left = 30.0
offset_top = 89.0
offset_right = 265.0
offset_bottom = 274.0
text = "OK"

[node name="Icon" type="Sprite2D" parent="."]
position = Vector2(147, 222)
scale = Vector2(0.820313, 0.828125)
texture = ExtResource("3_fkojh")

[node name="Icon2" type="Sprite2D" parent="."]
position = Vector2(1008, 209)
scale = Vector2(0.820313, 0.828125)
texture = ExtResource("3_fkojh")
flip_h = true

[connection signal="pressed" from="HBoxContainer/NewGame" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="HBoxContainer/LoadGame" to="." method="_on_load_game_pressed"]
[connection signal="pressed" from="HBoxContainer/QuitGame" to="." method="_on_quit_game_pressed"]
[connection signal="pressed" from="PopupMenu/popupbutton" to="." method="_on_popupbutton_pressed"]
